# pinentry-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
src/: assuan.rs  error.rs  lib.rs  unix.rs
