[package]
name = "pinentry"
description = "API for interacting with pinentry binaries"
version = "0.0.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"
nom = "5"
secrecy = "0.6"
which = { version = "3.1", default-features = false }
zeroize = "1"
