[package]
name = "pinentry"
description = "API for interacting with pinentry binaries"
version = "0.6.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
repository = "https://github.com/str4d/pinentry-rs"
readme = "README.md"
keywords = ["passphrase", "password"]
categories = ["api-bindings", "command-line-interface"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
log = "0.4"
nom = { version = "7", default-features = false }
percent-encoding = "2.1"
secrecy = "0.10"
which = { version = "4", default-features = false }
zeroize = "1"
